# tazar-bot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_tazar_web.sh  main.c  raygui.h  shell.html  tazar.c  tazar.h  tazar_ai.c  tazar_ai.h  tazar_ai_mcts.c  tazar_ai_mcts.h  tazar_game.c  tazar_game.h  tazar_test.c  tazar_train.c  tazar_ui.c
python/: main.py  model.py  prompt.md  tazar.py
